Interfaz grafica y todo finalizado